--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
     timeline.push(instruction_block1a);
     timeline.push(instruction_block1b);
     timeline.push(instruction_block2a);
-    timeline.push(instruction_block2b); 
+    timeline.push(instruction_block2b);  
 
 
     /* define attention check block */
@@ -463,7 +463,7 @@
       is_html: true,
       timeline: [
         {stimulus:
-            "Which, if any, of these monsters ever gave you <b>1 star</b>?"+
+            "Which of these monsters could have given you <b>1 star</b>?"+
             "</p>"
       },
      ],
@@ -486,7 +486,7 @@
       is_html: true,
       timeline: [
         {stimulus:
-            "Which, if any, of these monsters ever gave you <b>2 stars</b>?"+
+            "Which of these monsters could have given you <b>2 stars</b>?"+
             "</p>"
       },
      ],
@@ -509,7 +509,7 @@
       is_html: true,
       timeline: [
         {stimulus:
-            "Which, if any, of these monsters ever gave you <b>3 stars</b>?"+
+            "Which of these monsters could have given you <b>3 stars</b>?"+
             "</p>"
       },
      ],
@@ -532,7 +532,7 @@
       is_html: true,
       timeline: [
         {stimulus:
-            "Which, if any, of these monsters ever gave you <b>6 stars</b>?"+
+            "Which of these monsters could have given you <b>6 stars</b>?"+
             "</p>"
       },
      ],
@@ -555,7 +555,7 @@
       is_html: true,
       timeline: [
         {stimulus:
-            "Which, if any, of these monsters ever gave you <b>8 stars</b>?"+
+            "Which of these monsters could have given you <b>8 stars</b>?"+
             "</p>"
       },
      ],
@@ -585,7 +585,7 @@
       post_trial_gap: 800,
       is_html: true,
       timeline: [
-        {stimulu:
+        {stimulus:
             "Which monster did you like the most?"+
             "</p>"
       },
