post-test update

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
       is_html: true,
       timeline: [
         {stimulus:
-            "Which of these monsters could have given you <b>1 star</b>?"+
+            "Which monster gives <b>1 star</b>?"+
             "</p>"
       },
      ],
@@ -486,7 +486,7 @@
       is_html: true,
       timeline: [
         {stimulus:
-            "Which of these monsters could have given you <b>2 stars</b>?"+
+            "Which monster gives <b>2 stars</b>?"+
             "</p>"
       },
      ],
@@ -509,7 +509,7 @@
       is_html: true,
       timeline: [
         {stimulus:
-            "Which of these monsters could have given you <b>3 stars</b>?"+
+            "Which monster gives <b>3 stars</b>?"+
             "</p>"
       },
      ],
@@ -532,7 +532,7 @@
       is_html: true,
       timeline: [
         {stimulus:
-            "Which of these monsters could have given you <b>6 stars</b>?"+
+            "Which monster gives <b>6 stars</b>?"+
             "</p>"
       },
      ],
@@ -555,7 +555,7 @@
       is_html: true,
       timeline: [
         {stimulus:
-            "Which of these monsters could have given you <b>8 stars</b>?"+
+            "Which monster gives <b>8 stars</b>?"+
             "</p>"
       },
      ],
